--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap');
 
 :root{
-    --cor_principal: #DF7C7C;
+    --cor_principal: #D52323;
     --fonte-principal: Poppins;
     --cor-fonte-branca: #FFFFFF;
     --cor-vermelho: #FF0000;
@@ -29,14 +29,14 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 15px;
+    gap: 35px;
     margin-left: 150px;
 }
 
 .section1__esquerda__titulo{
-    font-size: 25px;
+    font-size: 30px;
     font-weight:800;
-    color: var(--cor-vermelho);
+    color: #553939;
 }
 
 .section1__esquerda__descricao{
@@ -54,4 +54,12 @@
     background-color: var(--cor-fonte-branca);
     color: var(--cor-vermelho);
     font-weight: 600;
+    box-shadow: rgba(14, 30, 37, 0.12) 0px 4px 8px 0px, rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;
+    transition: 500ms linear;
 }
+
+.section1__esquerda__botao:hover{
+    transform: scale(1.1);
+}
+
+
