--- a/styles/header.css
+++ b/styles/header.css
@@ -1,54 +1,51 @@
-.header__style{
+.headerConteiner{
     display: flex;
-    justify-content: space-between;
-}
-
-.header__style__logoPt{
-    width: 100px;
-}
-
-.header__style__menu{
-    display: flex;
-    justify-content: center; 
     align-items: center;
-    gap: 50px;
+    gap: 70px;
+    position: relative;
+    background-color: var(--cor-fonte-branca);
 }
 
-.header__style__botao{
-    display: flex;
-    justify-content: center; 
+.headerConteiner__checkbox{
+    display: none;
+}
+
+.headerConteiner__menu{
+    display: none;
+    position: absolute;
+    top: 100%;
+    background-color: var(--cor-fonte-branca);
+    padding: 20px;
+    width: 70%;
+    gap: 25px;
+    flex-direction: column;
     align-items: center;
+    font-family: Poppins;
+    font-size: 24px;
+    font-weight: 500;
 }
 
-.header__style__botao__itens{
-    box-shadow: rgba(67, 71, 85, 0.27) 0px 0px 0.25em, rgba(90, 125, 188, 0.05) 0px 0.25em 1em;
-}
-
-.header__style__botao__itens:hover{
-    transform: scale(1.1);
-    transition: 150ms linear;
-}
-
-.header__style__menu__itens{
-    font-family: var(--fonte-principal);
+.headerConteiner__menu__itens{
     text-decoration: none;
-    font-weight: 800;
-    color: var(--cor-vermelho);
-    font-size: 1.25rem;
-}
-
-.header__style__menu__itens:hover{
     color: black;
-    transform: scale(1.1);
 }
 
-.header__style__botao__itens{
-    border-radius: 50px;
-    padding: 15px 10px 15px 10px;
-    font-family: var(--fonte-principal);
+.headerConteiner__menu__ladding{
     text-decoration: none;
-    font-weight: 800;
-    color: var(--cor-fonte-branca);
-    font-size: 1.25rem;
+    color: white;
     background-color: var(--cor-vermelho);
+    padding: 10px;
+    border-radius: 50px;    
+    font-weight: 600;
+    font-size: 23px;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+}
+
+.headerConteiner__checkbox:checked~.headerConteiner__menu{
+    display: flex;
+
+}
+
+.cabecalho__logoMenu{
+    margin-left: 50px;
 }
