--- a/style.css
+++ b/style.css
@@ -12,51 +12,62 @@
     --fonte-principal: Poppins;
     --cor-fonte-branca: #FFFFFF;
     --cor-vermelho: #FF0000;
+    --cor-cinza-fundo:#D9D9D9;
     --fonte-principal: Poppins, sans-serif;
 }
 
-.mainConteiner__section1{
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    background-color: var(--cor-vermelho);
-    height: 100dvh;
+body{
+    background-color: var(--cor_principal);
 }
-
-.mainConteiner__section1__imagemFundo{
-    margin-top: 20px;
-}
-
-.mainConteiner__section1__descricao{
+.main__section1{
     display: flex;
     flex-direction: column;
-    align-items: center;
-    gap: 25px;
-
+    box-sizing: border-box;
 }
-
-.mainConteiner__section1__descricao__titulo{
-    font-size: 28px;
-    font-weight: 700;
-    margin-top: 15px;
+.main__section1__descricao{
+    display: flex;
+    flex-direction: column;
     color: var(--cor-fonte-branca);
-    text-align: center;
+    gap: 10px;
 }
 
-.mainConteiner__section1__descricao__paragrafo{
-    text-align: center;
-    color: #332B2B;
-    text-align: justify;
-    margin: 10px 10px;
+.main__section1__descricao__titulo{
+    font-size: 16px;
+    font-weight: 600;
+}
+
+.main__section1__descricao__subtitulo{
+    font-size: 32px;
+    font-weight:800;
+}
+
+.main__section1__descricao__paragrafo{
     font-size: 16px;
 }
 
-.mainConteiner__section1__descricao__botao{
-    background-color: var(--cor-fonte-branca);
-    text-decoration: none;
-    color: var(--cor-preto);
-    padding: 20px 60px;
+.main__section1__descricao{
+    margin: 50px 11px 0 11px;
+}
+
+.main__section1__descricao__button{
+    background-color: var(--cor-cinza-fundo);
+    margin-top: 25px;
+    padding: 12px;
+    width: 150px;
+    text-align: center;
     border-radius: 50px;
-    font-size: 20px;
-    box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+    text-decoration: none;
+    font-size: 14px;
+    font-weight: 600;
+    color: var(--cor-preto);
+}
+
+.main__section1__fotoLula{
+    width: 183px;
+}
+
+.main__section1__imagem{
+    display: flex;
+    justify-content: flex-end;
+    margin-right: 30px;
 }
