--- a/styles/header.css
+++ b/styles/header.css
@@ -1,10 +1,10 @@
 .headerConteiner{
     display: flex;
+    position: relative;
     justify-content: space-between;
     align-items: center;
-    position: relative;
     background-color: var(--cor-fonte-branca);
-    padding: 10px 10px;
+    padding: 10px  15px 10px 15px;  
     gap: 50px;
 }
 
@@ -17,13 +17,13 @@
     position: absolute;
     top: 100%;
     background-color: var(--cor-fonte-branca);
-    padding: 20px;
-    width: 70%;
+    padding: 10px;
+    width: 50%;
     gap: 25px;
     flex-direction: column;
     align-items: center;
     font-family: Poppins;
-    font-size: 24px;
+    font-size: 14px;
     font-weight: 500;
 }
 
@@ -39,7 +39,7 @@
     padding: 10px;
     border-radius: 50px;    
     font-weight: 600;
-    font-size: 23px;
+    font-size: 14px;
     box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
 }
 
