--- a/style.css
+++ b/style.css
@@ -23,6 +23,7 @@ body{
     display: flex;
     flex-direction: column;
     box-sizing: border-box;
+    gap: 37px;
 }
 .main__section1__descricao{
     display: flex;
@@ -60,6 +61,7 @@ body{
     font-size: 14px;
     font-weight: 600;
     color: var(--cor-preto);
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 }
 
 .main__section1__fotoLula{
@@ -68,6 +70,6 @@ body{
 
 .main__section1__imagem{
     display: flex;
-    justify-content: flex-end;
-    margin-right: 30px;
+    justify-content: center;
+    height: 300px;
 }
