--- a/styles/header.css
+++ b/styles/header.css
@@ -8,10 +8,6 @@
     gap: 50px;
 }
 
-.headerConteiner__checkbox{
-    display: none;
-}
-
 .headerConteiner__menu{
     display: none;
     position: absolute;
@@ -23,8 +19,12 @@
     flex-direction: column;
     align-items: center;
     font-family: Poppins;
-    font-size: 14px;
+    font-size: 15px;
     font-weight: 500;
+}
+
+.headerConteiner__checkbox{
+    display: none;
 }
 
 .headerConteiner__menu__itens{
@@ -39,8 +39,8 @@
     padding: 10px;
     border-radius: 50px;    
     font-weight: 600;
-    font-size: 14px;
-    box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+    font-size: 15px;
+    box-shadow: rgba(0, 0, 0, 0.09) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;
 }
 
 .headerConteiner__checkbox:checked~.headerConteiner__menu{
